backends/drm: let DrmGpu handle mode changes

Doing a test is not sufficient for mode changes

BUG: 450804