src/backends/drm/drm_output.cpp
@@ -307,7 +307,7 @@ void DrmOutput::updateModes()
         if (currentMode != m_pipeline->pending.mode) {
             // DrmConnector::findCurrentMode might fail
             m_pipeline->pending.mode = currentMode ? currentMode : m_pipeline->connector()->modes().constFirst();
-            if (DrmPipeline::commitPipelines(m_gpu->pipelines(), DrmPipeline::CommitMode::Test)) {
+            if (m_gpu->testPendingConfiguration(DrmGpu::TestMode::TestWithCrtcReallocation)) {
                 m_pipeline->applyPendingChanges();
                 setCurrentModeInternal(m_pipeline->pending.mode->size(), m_pipeline->pending.mode->refreshRate());
                 m_renderLoop->setRefreshRate(m_pipeline->pending.mode->refreshRate());
